# test_curandpoisson

./: CMakeLists.txt  README.md
scripts/: poisson_test.r
src/: CMakeLists.txt  cuda_globals.hpp  poisson.cu
